<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/tab1" />

    <item
        android:id="@+id/navigation_time"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/tab2" />
    <item
        android:id="@+id/navigation_noti"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/tab3" />
    <item
        android:id="@+id/navigation_pro"
        android:icon="@mipmap/ic_account_circle_white_48dp"
        android:title="@string/tab4" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@mipmap/ic_camera_enhance_white_24dp"
        android:title="@string/tab5" />

</menu>
