<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sr.thex.activity.AddEventActivity"
    tools:showIn="@layout/add_event_layout">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >



        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="false"
            app:cardPreventCornerOverlap="true"
            app:cardCornerRadius="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"


            >


            <ImageView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                app:srcCompat="@mipmap/samplemap"
                android:id="@+id/samplemap"
                app:cardCornerRadius="50dp"
                android:layout_marginBottom="30dp"

                />



            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabloc"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="bottom|center"
                android:layout_marginLeft="150dp"
                android:layout_marginBottom="20dp"
                app:srcCompat="@android:drawable/ic_menu_mylocation"
                app:color="#ffffff"
                />



        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="false"
            app:cardPreventCornerOverlap="true"
            app:cardCornerRadius="20dp"
            android:layout_marginBottom="10dp"

            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:layout_alignParentTop="true"
                app:errorEnabled="true"
                >

                <EditText
                    android:id="@+id/locationmatab"
                    android:gravity="left"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="GPS Location"
                    android:imeActionId="@+id/location"
                    android:imeActionLabel="@string/location"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:imeOptions="actionGo"
                    android:windowSoftInputMode="stateHidden|adjustResize"
android:enabled="false"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="70dp"
                >

                <EditText
                    android:id="@+id/locname"
                    android:gravity="left"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Location Address"
                    android:imeActionId="@+id/location"
                    android:imeActionLabel="Location Name"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:windowSoftInputMode="stateHidden|adjustResize"
                    android:enabled="false"


                    />

            </android.support.design.widget.TextInputLayout>

        </android.support.v7.widget.CardView>



        <!-- TWO -->
        <!-- TWO -->
        <!-- TWO -->
        <!-- TWO -->
        <!-- TWO -->
        <!-- TWO -->



        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="false"
            app:cardPreventCornerOverlap="true"
            app:cardCornerRadius="20dp"
            android:layout_marginBottom="10dp"

            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"

                >

            <EditText
                android:id="@+id/timematab"
                android:gravity="left"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/time"
                android:imeActionId="@+id/time"
                android:imeActionLabel="@string/time"
                android:imeOptions="actionUnspecified"
                android:inputType="time"
                android:maxLines="1"
                android:onClick="addtimec"
                android:windowSoftInputMode="stateHidden|adjustResize"
                android:enabled="false"

                />
            </android.support.design.widget.TextInputLayout>


        </android.support.v7.widget.CardView>



        <!-- TWO -->
        <!-- TWO -->
        <!-- TWO -->
        <!-- TWO -->
        <!-- TWO -->
        <!-- TWO -->




        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="false"
            app:cardPreventCornerOverlap="true"
            app:cardCornerRadius="20dp"
            android:layout_marginBottom="10dp"

            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"

                >


            <EditText
                android:id="@+id/datematab"
                android:gravity="left"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                android:imeActionId="@+id/date"
                android:imeActionLabel="@string/date"
                android:imeOptions="actionUnspecified"
                android:inputType="date"
                android:maxLines="1"
                android:windowSoftInputMode="stateHidden|adjustResize"
                android:enabled="false"

                />

</android.support.design.widget.TextInputLayout>

        </android.support.v7.widget.CardView>



        <!-- TWO -->
        <!-- TWO -->
        <!-- TWO -->
        <!-- TWO -->
        <!-- TWO -->
        <!-- TWO -->





        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="false"
            app:cardPreventCornerOverlap="true"
            app:cardCornerRadius="20dp"
            android:layout_marginBottom="10dp"

            >

            <TextView
                android:id="@+id/detailscu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:gravity="right"
                android:layout_marginRight="30dp"
                android:layout_weight="1" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                >

                <EditText
                    android:id="@+id/detailsmatab"
                    android:gravity="left"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:hint="@string/details"
                    android:imeActionId="@+id/dec"
                    android:imeActionLabel="@string/prompt_email"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textMultiLine"
                    android:maxLines="5"

                    />



            </android.support.design.widget.TextInputLayout>

        </android.support.v7.widget.CardView>



        <!-- TWO -->
        <!-- TWO -->
        <!-- TWO -->
        <!-- TWO -->
        <!-- TWO -->
        <!-- TWO -->






    </LinearLayout>






</android.support.v4.widget.NestedScrollView>
